[package]
name = "xmodem-term"
version = "0.2.0"
authors = ["Arron Speake <arron.speake@bluefruit.co.uk>"]
edition = "2018"
description = "A simple xmodem transmission client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["wrap_help"] }
serial = "0.4"
